infra/k8s/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-client-deployment
  labels:
    app: react-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: react-client
  template:
    metadata:
      labels:
        app: react-client
    spec:
      containers:
      - name: react-client
        image: dockergl98/react-client-ts
        ports:
        - containerPort: 3000
---
# We could create a separate .yaml file for the service but is not a common pattern.
# Usually service and deployments go together.
apiVersion: v1
kind: Service
metadata:
  name: client-service
spec:
  selector:
    app: react-client
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
